--- a/style.css
+++ b/style.css
@@ -3,8 +3,34 @@
     padding: 0px;
 }
 
+
 div#edit_window_container {
     overflow: hidden;
+    position: relative;
     width: 100vw;
     height: 100vh;
+}
+
+div#draw_mode_container {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+
+div#draw_mode {
+    display: inline-block;
+    border-radius: 10px;
+    margin-top: 5px;
+    padding: 3px;
+    border: 1px solid black;
+}
+
+div#draw_mode p {
+    display: inline-block;
+    border-radius: 10px;
+    padding: 5px;
+    border: 1px solid black;
+    background-color: rgba(0, 0, 255, 0.3);
+    line-height: 80%;
+    font-size: 25px;
 }
