--- a/style.css
+++ b/style.css
@@ -11,26 +11,32 @@ div#edit_window_container {
     height: 100vh;
 }
 
-div#draw_mode_container {
-    position: absolute;
-    text-align: center;
-    width: 100%;
+div#draw_mode:hover {
+    cursor: pointer;
 }
 
 div#draw_mode {
     display: inline-block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+    border: 1px solid black;
     border-radius: 10px;
     margin-top: 5px;
     padding: 3px;
-    border: 1px solid black;
 }
 
 div#draw_mode p {
     display: inline-block;
+    background-color: rgba(0, 0, 255, 0.3);
+    border: 1px solid black;
     border-radius: 10px;
     padding: 5px;
-    border: 1px solid black;
-    background-color: rgba(0, 0, 255, 0.3);
     line-height: 80%;
     font-size: 25px;
+}
+
+div#draw_mode p#current_mode {
+    background-color: rgba(0, 0, 255, 0.7);
 }
