--- a/style.css
+++ b/style.css
@@ -4,6 +4,38 @@
 }
 
 
+div#UI-container {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+div#shapes_list_container {
+    box-sizing: border-box;
+    border-right: 3px solid black;
+    width: 25%;
+    height: 100vh;
+    overflow-y: auto;
+}
+
+div#shapes_list_container h1 {
+    border-bottom: 3px solid black;
+    text-align: center;
+}
+
+
+div#edit_window_container {
+    position: relative;
+    width: 75%;
+}
+
+div#edit_window {
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+}
+
+
 div#draw_mode:hover {
     cursor: pointer;
 }
@@ -33,11 +65,4 @@ div#draw_mode p {
 
 div#draw_mode p#current_mode {
     background-color: rgba(0, 0, 255, 0.7);
-}
-
-
-div#edit_window {
-    overflow: hidden;
-    width: 100vw;
-    height: 100vh;
 }
